--- a/components/Menu/menu_.module.scss
+++ b/components/Menu/menu_.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   @include mediaMob {
     flex-direction: column;
-    gap: 3rem;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -21,7 +20,10 @@
 
   transition: 0.3s box-shadow ease-in-out;
   @include mediaMob {
-    margin: 0;
+    margin-bottom: 3rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
